@@ -1,3 +1,7 @@
+2020-09-16  Mark Wielaard  <mark@klomp.org>
+
+	* debuginfod-find.c: Fix license block comment.
+
 2020-09-15  Mark Wielaard  <mark@klomp.org>
 
 	* debuginfod-find.c (main): Use dwelf_elf_begin.
